--- a/src/app/barbers/barbers.component.scss
+++ b/src/app/barbers/barbers.component.scss
@@ -40,12 +40,26 @@
     color: white;
 }
 
+@media screen and (max-width: 576px) {
+    .form {
+        position: relative;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .form {
+        position: fixed;
+        top: 40%;
+        right: 7%;
+    }
+}
+
 .btn {
     font-family: 'Squada One', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(253, 149, 100);
     color: white;
-    font-size: 37px;
-    font-weight: 500;
-    letter-spacing: 1.8px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 2px;
     border-radius: 34px;
 }
