--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,1 +1,14 @@
-<p>success works!</p>
+<div class="d-flex align-items-center min-vh-100">
+    <div class="container">
+        <div class="row justify-content-center">
+            <h1 class="text-center main-title">
+                APPOINTMENT SUCCESSFULLY BOOKED
+            </h1>
+            <img 
+                src="{{randomGiphUrl}}" 
+                class="text-center success-img"
+            >
+        </div>
+    </div>
+</div>
+
