--- a/src/app/barbers/barbers.component.scss
+++ b/src/app/barbers/barbers.component.scss
@@ -40,20 +40,6 @@
     color: white;
 }
 
-@media screen and (max-width: 576px) {
-    .form {
-        position: relative;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .form {
-        position: fixed;
-        top: 40%;
-        right: 7%;
-    }
-}
-
 .btn {
     font-family: 'Squada One', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(253, 149, 100);
@@ -62,4 +48,38 @@
     font-weight: 400;
     letter-spacing: 2px;
     border-radius: 34px;
+}
+
+.text-danger {
+    font-size: 10px;
+}
+
+.input-group {
+    flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+    .form {
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translateX(-20%);
+        max-width: 450px;
+    }
+
+    .main-img{
+        max-width: 80%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .form {
+        transform: translateX(20%);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .form {
+        transform: translateX(30%);
+    }
 }
