feat: add logic pt.2

--- a/src/app/barbers/barbers.component.html
+++ b/src/app/barbers/barbers.component.html
@@ -217,7 +217,7 @@
             </div> 
             <div class="col-12 input-group mt-5 mb-5">
                 <button
-                    [disabled]="" 
+                    [disabled]="barbersForm.invalid" 
                     type="submit" 
                     class="btn btn-block"
                 > BOOK <span class="d-none d-sm-inline"> APPOINTMENT </span>
