--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,13 +1,17 @@
 <div class="d-flex align-items-center min-vh-100">
     <div class="container">
-        <div class="row justify-content-center">
-            <h1 class="text-center main-title">
-                APPOINTMENT SUCCESSFULLY BOOKED
-            </h1>
-            <img 
-                src="{{randomGiphUrl}}" 
-                class="text-center success-img"
-            >
+        <div class="row">
+            <div class="col-12 justify-content-center">
+                <h1 class="text-center main-title">
+                    APPOINTMENT SUCCESSFULLY BOOKED
+                </h1>
+            </div>
+            <div class="col-12 justify-content-center text-center">
+                <img 
+                    src="{{randomGifUrl}}" 
+                    class="img-fluid success-img"
+                >
+            </div>
         </div>
     </div>
 </div>
